# task-manager

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 4756ed42f5bd_create_task_table.py
app/: __init__.py  __main__.py  connections.py  exceptions.py  models.py
app/logging/: __init__.py  exceptions.py  logger.py  middleware.py
app/routers/: __init__.py
app/routers/tasks/: __init__.py  controller.py  validation.py
